Add reCAPTCHA and src script to index.html

--- a/index.html
+++ b/index.html
@@ -91,5 +91,7 @@
   <body>
     <div class="grain" aria-hidden="true"></div>
     <div id="root"></div>
+    <script type="module" src="/src/index.tsx"></script>
+    <script src="https://www.google.com/recaptcha/api.js?render=6LeBrGYsAAAAACDlFVh-KaG83tvYGBp4a9h7e4Yk"></script>
   </body>
 </html>
